commit changes to friends, survey,apiRoutes and server.js

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -23,10 +23,10 @@
 
 		<h2>Survey Questions</h2>
 		<hr>
-
+		<!-- Home Button -->
 		<div class="">
 				<a href="/"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go Home</h4></button></a>	
-			</div>
+		</div>
 
 		<h3><strong>About You</strong></h3>
 		<h4>Name (Required)</h4>
