--- a/app/public/home.html
+++ b/app/public/home.html
@@ -28,6 +28,11 @@
 				<a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>	
 			</div>
 		</div>
+		<footer class="footer">
+	      <div class="container">
+		        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+	      </div>
+	    </footer>
 	</div>	
 </body>
 </html>
