--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -159,6 +159,12 @@
 		<button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i>
  Find Friends</button>
 	</div>
+	<hr>
+	<footer class="footer">
+	      <div class="container">
+		        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+	      </div>
+	</footer>
 
 	<!-- Modal -->
 	<div id="resultsModal" class="modal fade" role="dialog">
@@ -186,3 +192,4 @@
 
 </body>
 </html>
+
